Revert "sm8550-common: Fixing Overlays"
This reverts commit ad529e8e0d5989f1327e5f506edf618eb61cbbb6.

--- a/overlays/odm/Frameworks/res/values/config.xml
+++ b/overlays/odm/Frameworks/res/values/config.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- The default refresh rate for a given device. If a non-zero value is set for
+         config_defaultPeakRefreshRate, then config_defaultRefreshRate may be set to 0, in that case
+         the value set for config_defaultPeakRefreshRate will act as the default peak frame rate -->
+    <integer name="config_defaultRefreshRate">0</integer>
+
+    <!-- The default peak refresh rate for a given device. Change this value if you want to prevent
+         the framework from using higher refresh rates, even if display modes with higher refresh
+         rates are available from hardware composer. Only has an effect if the value is
+         non-zero. -->
+    <integer name="config_defaultPeakRefreshRate">120</integer>
+
     <!-- Indicate available ColorDisplayManager.COLOR_MODE_xxx. -->
     <integer-array name="config_availableColorModes">
         <item>258</item> <!-- vivid -->
@@ -58,6 +69,10 @@
 
     <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
     <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/qcom-battery/fastchg_mode</string>
+
+    <!-- Default refresh rate in the zone defined by brightness and ambient thresholds.
+         If non-positive, then the refresh rate is unchanged even if thresholds are configured. -->
+    <integer name="config_defaultRefreshRateInZone">120</integer>
 
     <!-- If true, the display will be shifted around in ambient mode. -->
     <bool name="config_enableBurnInProtection">true</bool>
